--- a/Codigo/Clase10/movies23643/style.css
+++ b/Codigo/Clase10/movies23643/style.css
@@ -9,30 +9,34 @@ body {
 	background: #403f3f;
 	color:  #e0e0e0;
 }
+.header{
+	text-align: center;
+	margin: 1rem;
+}
 
 .container {
 	width: 90%;
 	max-width: 1000px;
-	margin: 40px auto 100px auto;
+	margin: 2.5rem auto 100px auto;
 	display: grid;
 	grid-template-columns: repeat(4, 1fr);
 	-ms-grid-columns: repeat(4, 1fr);
-	gap: 40px;
+	gap: 2.5rem;
 }
 
-.container .pelicula {
+.container .card {
 	text-align: center;
 }
 
-.contenedor .pelicula .titulo {
-	font-size: 16px;
+.contenedor .card .card__title {
+	font-size: 1rem;
 	font-weight: 600;
 }
 
-.container .pelicula .poster {
+.container .card .card__img {
 	width: 100%;
-	margin-bottom: 10px;
-	border-radius: 15px;
+	margin-bottom: 0.625rem;
+	border-radius: 1rem;
 }
 
 .pagination {
@@ -42,8 +46,8 @@ body {
 	width: 100%;
 	display: flex;
 	justify-content: center;
-	gap: 20px;
-	padding: 10px;
+	gap: 1.25rem;
+	padding: 0.625rem;
 }
 
 .pagination button {
@@ -53,8 +57,8 @@ body {
 	align-items: center;
 	justify-content: center;
 	text-align: center;
-	height: 50px;
-	width: 200px;
+	height: 3.125rem;
+	width: 12.5rem;
 	background: #241744;
 	color: #fff;
 	border-radius: 100px;
