--- a/Codigo/Clase11/movies23643/style.css
+++ b/Codigo/Clase11/movies23643/style.css
@@ -62,6 +62,24 @@ body {
     box-shadow: 5px 5px 10px #bebebe,
                -5px -5px 10px #bebebe;
 }
+.container_details{
+	justify-content: center;
+	align-items: center;
+}
+.details{
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: center;
+	gap: 20px;
+	width: 70%;
+}
+.details__text{
+	display: flex;
+	flex-direction: column;
+	margin-top: 2rem;
+	gap: 1rem;
+}
 
 .pagination {
 	position: fixed;
