--- a/Codigo/movies-cac23643/src/components/FooterBar/FooterBar.css
+++ b/Codigo/movies-cac23643/src/components/FooterBar/FooterBar.css
@@ -1,4 +1,16 @@
-.pagination {
+.footerbar{
+	position: fixed;
+	bottom: 0;
+	background: #111919;
+	width: 100%;
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	gap: 1.25rem;
+	padding: 0.625rem;
+}
+
+/* .pagination {
 	position: fixed;
 	bottom: 0;
 	background: #111919;
@@ -7,8 +19,16 @@
 	justify-content: center;
 	gap: 1.25rem;
 	padding: 0.625rem;
+} */
+.footerbar__container{
+	justify-content: center;
+	text-align: center;	
 }
-.pagination button {
+.footerbar__buttons{
+	display: flex;
+	gap: 2rem;
+}
+.footerbar__buttons button {
 	cursor: pointer;
 	border: none;
 	display: flex;
