[Clase 17] Fix styles

--- a/Codigo/movies-cac23643/src/components/MovieCard/MovieCard.css
+++ b/Codigo/movies-cac23643/src/components/MovieCard/MovieCard.css
@@ -25,8 +25,8 @@
 	flex-direction: column;
 	justify-content: center;
  	align-items: center;
-	background-color: aliceblue;
-	color: black;
+	background-color: #93B1A6;
+	color: #040D12;
 	border-bottom-left-radius: 1rem;
 	border-bottom-right-radius: 1rem;
 }
