--- a/Codigo/movies-cac23643/src/App/App.css
+++ b/Codigo/movies-cac23643/src/App/App.css
@@ -6,8 +6,8 @@
   
 body {
     font-family: 'Montserrat', sans-serif;
-    background: #403f3f;
-    color:  #e0e0e0;
+    background: #040D12;
+    color:  #93B1A6;
 }
 .header{
     text-align: center;
