--- a/Codigo/movies-cac23643/src/components/FooterBar/FooterBar.css
+++ b/Codigo/movies-cac23643/src/components/FooterBar/FooterBar.css
@@ -1,7 +1,7 @@
-.footerbar{
+.footerbar{	
 	position: fixed;
 	bottom: 0;
-	background: #111919;
+	background: #183D3D;
 	width: 100%;
 	display: flex;
 	flex-direction: row;
@@ -20,7 +20,9 @@
 	gap: 1.25rem;
 	padding: 0.625rem;
 } */
-.footerbar__container{
+.footerbar__container{	
+	display: flex;
+	flex-direction: column;
 	justify-content: center;
 	text-align: center;	
 }
@@ -37,13 +39,16 @@
 	text-align: center;
 	height: 3.125rem;
 	width: 12.5rem;
-	background: #241744;
-	color: #fff;
+	background: #040D12;
+	color: #93B1A6;
 	border-radius: 100px;
 	font-family: 'Montserrat', sans-serif;
 	font-weight: 600;
 	transition: .3s ease all;
 }
 .pagination button:hover {
-	background: #137c32;
+	background: #5C8374;
 } 
+.copyright{
+	margin-top: 1rem;
+}
