--- a/Codigo/movies-cac23643/src/components/MoviesGrid/MoviesGrid.css
+++ b/Codigo/movies-cac23643/src/components/MoviesGrid/MoviesGrid.css
@@ -1,7 +1,7 @@
 .container {
 	width: 90%;
 	max-width: 1000px;
-	margin: 2.5rem auto 100px auto;
+	margin: 2.5rem auto 9rem auto;
 	display: grid;
 	grid-template-columns: repeat(4, 1fr);
 	-ms-grid-columns: repeat(4, 1fr);
