[Clase 18] fetch a la api y renderizado de movies, re estructuracion, instalacion de react-router-dom

--- a/Codigo/movies-cac23643/src/components/FooterBar/FooterBar.css
+++ b/Codigo/movies-cac23643/src/components/FooterBar/FooterBar.css
@@ -46,7 +46,8 @@
 	font-weight: 600;
 	transition: .3s ease all;
 }
-.pagination button:hover {
+.footerbar__buttons button:hover {
+	color: #040D12;
 	background: #5C8374;
 } 
 .copyright{
