[Clase 19] Ruta a Pages/DetailMovie de Link/card redireccionado, get a otro endpoint

--- a/Codigo/movies-cac23643/src/App/App.css
+++ b/Codigo/movies-cac23643/src/App/App.css
@@ -5,11 +5,10 @@
 }
   
 body {
+    display: grid;    
+    justify-items: center;
+    align-items: center;
     font-family: 'Montserrat', sans-serif;
     background: #040D12;
-    color:  #93B1A6;
-}
-.header{
-    text-align: center;
-    margin: 1rem;
+    color: #93B1A6;
 }
