[Clase 22]CRUD-Firebase, Mostrar tabla con estilos de bootstrap

--- a/Codigo/CRUD-Firebase/src/index.css
+++ b/Codigo/CRUD-Firebase/src/index.css
@@ -84,10 +84,10 @@ input[type="text"]::placeholder {
 }
 
 /* HELPERS */
-.container {
+/* .container {
     max-width: 1200px;
     margin: 0 auto;
-}
+} */
 .grid-fixed {
     display: grid;
     grid-template-rows: auto 1fr auto;
