--- a/Codigo/CRUD-Firebase/src/partials/Header.css
+++ b/Codigo/CRUD-Firebase/src/partials/Header.css
@@ -1,6 +1,6 @@
 .page-header {
     background-color: var(--dark-bg-solid);
-    padding: var(--spacing-36);
+    padding: var(--spacing-8) var(--spacing-68) var(--spacing-8) var(--spacing-68);
 }
 .navbar {
     display: flex;
