--- a/Codigo/CRUD-Firebase/src/index.css
+++ b/Codigo/CRUD-Firebase/src/index.css
@@ -61,6 +61,11 @@ body {
     padding-bottom: var(--spacing-128);
     min-height: 100vh;
 }
+.container{
+    display: flex;
+    
+    text-align: center;
+}
 a {
     text-decoration: none;
     font-family: inherit;
